# MinerSimulator

./: CMakeLists.txt  README.md  main.cpp
include/: Console.h  Equipment.h  Menus.h  Miner.h  Rank.h
src/: Console.cpp  Equipment.cpp  Main.cpp  Menus.cpp  Miner.cpp  Rank.cpp
